<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingLeft="@dimen/dp_15"
    android:paddingRight="@dimen/dp_15"
    android:paddingBottom="@dimen/dp_25"
    android:orientation="vertical"
    android:background="@color/green_dialog">

    <TextView
        android:id="@+id/tv_hoster_name"
        android:layout_marginTop="@dimen/dp_25"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/hoster_invited"></TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_15"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_later"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/later"
            android:background="@drawable/shape_later"
            android:layout_height="@dimen/dp_35"
            android:layout_marginRight="@dimen/dp_15"></Button>

        <Button
            android:id="@+id/btn_join"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/ok"
            android:textColor="@color/green_dialog"
            android:background="@drawable/shape_join_as_speaker"
            android:layout_height="@dimen/dp_35"></Button>
    </LinearLayout>


</LinearLayout>